<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/unyas3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administracion">

    <LinearLayout
        android:layout_width="274dp"
        android:layout_height="270dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051">

        <Button
            android:id="@+id/button_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80114A"
            android:text="@string/perfil"
            app:cornerRadius="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <Button
            android:id="@+id/button_pedir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80114A"
            android:text="@string/usuario"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <Button
            android:id="@+id/button_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80114A"
            android:text="@string/citas"
            app:cornerRadius="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <Button
            android:id="@+id/buttonCerrarSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80114A"
            android:text="@string/cerrar_sesion"
            app:cornerRadius="10dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>