<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dg_color"

    tools:context=".Modificar_Usuarios">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/editPerf"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="399dp"
                android:layout_height="27dp" />

            <EditText
                android:id="@+id/editTextModNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtvw"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp"

                android:textStyle="italic"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextModApe1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtvw"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/ape1"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextModApe2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtvw"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/ape2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextModPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtvw"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/num_telf2"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textStyle="italic"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <EditText
                android:id="@+id/editTextModEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtvw"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textStyle="italic"
                android:enabled="false"
                android:importantForAutofill="no" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonModConfir"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#030D3C"
                    android:text="@string/confirmar"
                    android:textAllCaps="false" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonModVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#030D3C"
                    android:text="@string/volver"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>