<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dg_color"
    tools:context=".SplashScreenMain">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="229dp"
            android:layout_height="241dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <EditText
            android:id="@+id/editTextEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="serif"
            android:foregroundTint="#AFA7A7"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <EditText
            android:id="@+id/editTextTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textStyle="italic" />

        <Space
            android:layout_width="353dp"
            android:layout_height="13dp" />

        <TextView
            android:id="@+id/textViewResPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/resPass"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEntrar"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:backgroundTint="#80114A"
                android:fontFamily="serif"

                android:text="@string/entrar"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="10dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonRegistro"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:backgroundTint="#80114A"
                android:fontFamily="serif"

                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>